fixed stretching issue

--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -69,16 +69,13 @@ img {
     height: 175px;
   }
   .common-top {
-    top: -120px;
+    top: -90px;
   }
   .first-top {
-    top: -160px;
+    top: -144px;
   }
   .width {
     width: 50%;
-  }
-  .step-height {
-    height: 190px;
   }
 }
 
